--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>Ray tracing in computer graphics</h1>
+        <p>In the following weeks, this page will give you background information about ray tracing in computer graphics</p>
     </body>
 </html>
